# docker_ldap_testing

./: .env.example  .gitignore  CHANGELOG.md  GETTING_STARTED.md  Makefile  PORT_CONFIGURATION.md  QUICKREF.md  README.md  docker-compose.yml  pyproject.toml  quickstart.sh
certs/: README.md
examples/: README.md  simple_auth.py
ldif/: 01-users.ldif  02-organizational-structure.ldif  03-department-users.ldif  04-computers.ldif  05-service-accounts.ldif  06-groups.ldif  07-resources.ldif
scripts/: __init__.py  cli.py  generate_certs.py  ldapsearch_helper.sh
tests/: __init__.py  test_generate_certs.py
